fix: add horizontal hidden overflow to main container

--- a/src/components/pad.module.css
+++ b/src/components/pad.module.css
@@ -2,6 +2,8 @@
   position: relative;
   width: 100%;
   min-height: 1000vw;
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
 
 .grid {
